--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,8 @@ body {
   width: 100%;
 }
 
-.navbar {
+.navbar ul {
+  list-style: none;
   display: flex;
   justify-content: space-around;
 
@@ -26,11 +27,11 @@ body {
     color: rgb(11, 11, 73);
     transform: translateY(-3px);
   }
-}
+} 
 
 .navbar a {
-  color: rgb(7, 3, 253);
   text-decoration: none;
+  color:  blue;
 }
 
 h1 {
@@ -38,6 +39,7 @@ h1 {
   margin-top: 1em;
   text-align: center;
   text-shadow: 0.05em 0.03em #2e2e6b;
+  font-style: italic;
 }
 
 h2 {
@@ -122,12 +124,31 @@ p {
 .exp-name {
   display: flex;
   flex-direction: column;
+  grid-template-columns: 6em 1fr;
   gap: 0.3em;
 }
 
 #Skills {
   background-color: rgb(234, 215, 243);
   text-align: center;
+  padding: 2em;
+  
+}
+
+.allSkills {
+  list-style: none;
+  justify-content: space-around;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  flex-direction: column-reverse;
+}
+
+.allSkills li {
+  background-color: rgba(66, 66, 147, 0.655);
+  border-radius: 0.5em;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
 }
 
 #Projects {
@@ -173,4 +194,13 @@ p {
 
 .fa-envelope:hover {
   transform: translateY(-3px);
+}
+
+footer {
+  background-color: rgba(170, 217, 249, 0.776);
+  justify-items: center;
+  font-size: 1.2em;
+  margin-top: 1em;
+  padding: 1em;
+  
 }
