--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,39 @@
+/* for screens up to 480px */
+@media(max-width: 480px) {
+    body {
+        background-color: rgb(205, 238, 249);
+    }
+    .myphoto {
+        display: none;
+    }
+    h1 {
+        font-size: 1em;  
+    }
+    h2 {
+        font-size: 1.1em;
+    }
+    h3 {
+        font-size: 1em;
+    }
+    p {
+        font-size: 0.9em;  
+    }
+    .allSkills {
+        gap: 0.5em;
+        grid-template-columns: auto auto;
+    }
+
+    .allSkills li {
+        box-shadow: 0.4em 0.3em 0.4em #565656;
+        font-size: 0.8em;
+        padding: 0.4em;
+        margin: 0.3em;
+    }
+    .connect-icons {
+        gap: 2em;
+        font-size: 0.8em;
+    }
+}
 /* small, mobile, (481px-768px) */
 @media (min-width: 481px) {
 .navbar {
@@ -31,6 +67,17 @@ h3 {
     width: 10em;
     height: 13em;
     justify-content: center;
+}
+
+.allSkills {
+    gap: 0.9em;
+}
+
+.allSkills li {
+    box-shadow: 0.5em 0.4em 0.5em #565656;
+    font-size: 1em;
+    padding: 0.3em;
+    margin: 0.2em;
 }
 
 .link {
@@ -75,6 +122,17 @@ h3 {
     width: 12em;
     height: 15em;
     justify-content: center;
+}
+
+.allSkills {
+    gap: 1em;
+}
+
+.allSkills li {
+    box-shadow: 0.5em 0.5em 0.5em #565656;
+    font-size: 1.1em;
+    padding: 0.4em;
+    margin: 0.3em;
 }
 
 .link {
@@ -122,6 +180,17 @@ h3 {
 .exp-date {
     grid-template-columns: 10em 1fr;
     padding-bottom: 1.5em;
+}
+
+.allSkills {
+    gap: 1.2em;
+}
+
+.allSkills li {
+    box-shadow: 0.6em 0.5em 0.6em #565656;
+    font-size: 1.2em;
+    padding: 0.5em;
+    margin: 0.3em;
 }
 
 .link {
