--- a/css/index.css
+++ b/css/index.css
@@ -42,15 +42,16 @@ body {
 
 .navbar a {
   text-decoration: none;
+  padding: 0.1em 0.2em;
 }
 
 .navbar a:hover {
-  color: rgb(6, 6, 63);
+    color: rgb(6, 6, 63);
+    border-radius: 0.5em;
+    border-color: darkblue;
+    border: 1.6px solid transparent darkblue;
+    box-shadow: 0.1em 0.2em 0.2em 0.2em #0e3568;
 }
-
-/* .navbar li:hover {
-    transform: translateY(-3px);
-  } */
 
 h1 {
   color: rgb(53, 143, 245);
@@ -98,7 +99,8 @@ p {
 #messagesForm,
 #messages {
   padding: 3em 3.5em;
-  box-shadow: 0.4em 0.4em 0.4em #b6b5b5;
+  box-shadow: 0 0 0.8em 0.3em #b6b5b5;
+  /* box-shadow: 0.4em 0.4em 0.4em #b6b5b5; */
 }
 
 #About {
@@ -178,6 +180,22 @@ p {
   background-color: rgb(186, 197, 235);
 }
 
+#myProjects {
+  list-style: none;
+  color: darkblue;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+#myProjects a {
+  text-decoration: none;
+}
+
+#myProjects a:hover {
+  color: rgb(30, 138, 232);
+  transform: translateY(-3px);
+}
+
 #Connect {
   text-align: center;
   background-color: rgb(160, 249, 224);
@@ -190,7 +208,8 @@ p {
 
 .link {
   color: rgb(11, 11, 98);
-  display: none;
+  font-weight: bold;
+  /* text-decoration: none; */
 }
 
 .link:hover {
@@ -223,24 +242,21 @@ p {
   background-color: rgb(234, 215, 243);
 }
 
+.but_submit {
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  
+}
+
 .but_submit:hover {
   transform: translateY(-2px);
   background-color: #8b8bdd;
-}
-
-footer {
-  background-color: rgba(184, 222, 247, 0.776);
-  justify-items: center;
-  font-size: 1.2em;
-  margin-top: 1em;
-  padding: 1em;
-  
 }
 
 #removeB, #editB {
   background-color: rgb(250, 199, 237);
   border-radius: 0.4em;
   border: 2px solid rgb(206, 126, 186);
+  font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 #removeB:hover {
@@ -254,7 +270,27 @@ footer {
 
 #newMessage {
   list-style: none;
-  color: #565656;
+}
+
+#newMessage span {
+  color: rgb(29, 29, 48);
+}
+
+#newMessage a {
+  font-weight: bold;
+}
+
+.input {
+  border-radius: 0.3em;
+  margin-left: 1em;
+}
+
+footer {
+  background-color: rgba(184, 222, 247, 0.776);
+  justify-items: center;
+  font-size: 1.2em;
+  margin-top: 1em;
+  padding: 1em;
 }
 
 
